--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -170,8 +170,8 @@ nav::before {
   top: 20px;
   left: 50%;
   transform: translateX(-50%);
-  width: 100px;
-  height: 40px;
+  width: 120px;
+  height: 60px;
   background-image: url('/images/Logo_white.png');
   background-size: contain;
   background-repeat: no-repeat;
@@ -181,7 +181,7 @@ nav::before {
 nav ul {
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin: 60px 0 60px 0;
   display: flex;
   flex-direction: column;
   gap: 25px;
