Updated IntroSection with dark elegant background

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -17,8 +17,7 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: #241e46;
-  background-image: url('/images/6565.png');
+  background-color: #ffffff;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
